# speech-adapter-routing

./: .gitignore  PROJECT_REQUIREMENTS.md  README.md  pyproject.toml  requirements.txt  setup_uv.sh  test_cv_load.py  test_inference_run.py  test_setup.py
configs/dataset_configs/: default.yaml
configs/lora_configs/: default.yaml
configs/model_configs/: owsm.yaml  whisper.yaml
configs/training_configs/: default.yaml
scripts/: download_datasets.py  evaluate_model.py  train_lora.py  train_router.py
slurm_jobs/: evaluate.sh  monitor_jobs.sh  submit_all_phase1.sh  train_lid.sh  train_lora_array.sh  train_single.sh
src/: __init__.py
src/data/: __init__.py  collate.py  dataset.py  preprocessing.py
src/evaluation/: __init__.py
src/models/: __init__.py  adapter_router.py  base.py  whisper_lora.py
src/training/: __init__.py  callbacks.py  metrics.py  trainer.py
